mobile overflow fix and dollar position change

--- a/css/_social-media.scss
+++ b/css/_social-media.scss
@@ -37,7 +37,7 @@ $number-of-links-mobile: 4;
 }
 
 .social-media__buttons {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -171,6 +171,10 @@ $number-of-links-mobile: 4;
 
   .is-mobile .dark & {
     fill: white;
+
+    @media (min-width: 550px) {
+      fill: $color-font-dark;
+    }
   }
 
   @media (min-width: 550px) {
